libtaskmanager: check if item before/after is a launcher before moving it

When separateLaunchers is disabled, also check if the item at before/after
the new position is a launcher to avoid moving an actual window.

BUG: 462508
FIXED-IN: 5.27